KALI: Fixed markdown rendering and search field size on mobile

--- a/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
+++ b/src/Web/Sfa.Das.Sas.Web/Content/src/styles/screen.scss
@@ -37,3 +37,33 @@ input[name="PostCode"]{
     width: auto;
     float: left;
 }
+
+.markdown {
+    h2 {
+        @include heading-36;
+        font-weight: bold;
+    }
+    h3 {
+        @include heading-27;
+        font-weight: bold;
+    }
+    h4 {
+        @include heading-24;
+        font-weight: bold;
+    }
+    ul {
+        list-style-type: disc;
+    }
+    ol {
+        list-style-type: decimal;
+    }
+    ol, ul {
+        margin-left: 0;
+        padding-left: 2rem;
+        li {
+            margin-left: .5rem;
+            padding-left: 0;
+        }
+        margin-bottom: 1rem;
+    }
+}
